# triage

./: .dockerignore  .env.docker  .env.example  .gitignore  DOCKER_QUICKSTART.md  LICENSE  Makefile  README.md  coverage.json  docker-compose.yml  pyproject.toml  requirements.txt  template.yaml
.kiro/hooks/: increment-version-pre-commit.kiro.hook
.kiro/steering/: implementation-context.md  product.md  structure.md  tech.md
.triage/closure/: closure_2026-01-23.json
ai_secretary/: __init__.py  approval_manager.py  cli.py  jira_client.py  models.py  plan_generator.py  task_classifier.py
config/plugins/: slack.yaml.example
docker/: Dockerfile.api  Dockerfile.scheduler  README.md  __init__.py  api_gateway_proxy.py  deploy-cloudformation.sh  deploy-to-localstack.py  deploy-to-localstack.sh  event_processor_worker.py  init-localstack.py  init-localstack.sh  local_api.py  plugin_handler_app.py  requirements.txt  scheduler.py
docs/: AWS_DEPLOYMENT.md  AWS_IAM_PERMISSIONS.md  BLOCKED_TASKS_HANDLING.md  CHECKPOINT_9_VERIFICATION.md  CLI_UPDATE_SUMMARY.md  CLOSURE_TRACKING_IMPLEMENTATION.md  COMPLETE_ENGLISH_TRANSLATION.md  DOCKER_LOCAL_SETUP.md  DOCKER_SETUP_SUMMARY.md  DOCKER_STACK_STATUS.md  FINAL_VALIDATION_REPORT.md  INTEGRATION_TESTS_FIX.md  JIRA_API_MIGRATION.md  JIRA_STATE_REFLECTION_TEST_FIX.md  LAMBDA_FOLDER_EXPLANATION.md  LOGGING_GUIDE.md  LOGGING_IMPLEMENTATION.md  MVP_COMPLETE.md  MVP_VALIDATION_GUIDE.md  MVP_VALIDATION_RESULTS.md  PLANNING_BEHAVIOR_UPDATE.md  POSTMAN_SETUP.md  PROPERTY_TEST_FIX_SUMMARY.md  PROPERTY_TEST_MEMORY_FIX.md  README.md  README_TRANSLATION_SUMMARY.md  RENAME_SUMMARY.md  REPLANNING_IMPLEMENTATION.md  REPOSITORY_FILES_GUIDE.md  SLACK_BOT_SETUP.md  TASK_STATUS_FILTERING_FIX.md  TEST_FIXES_SUMMARY.md  aws-iam-policy.json  postman_collection.json  postman_environment.json
events/: generate-plan.json  health-check.json
examples/: README.md  api_client.py  demo_closure_tracking.py  demo_decomposition.py  demo_logging.py  demo_mvp.py  demo_replanning.py  diagnose-jira-connection.py  generate-plan.sh  run_demo_auto.py  test_local_stack.py  using-dotenv.md  validate_mvp.py  verify_checkpoint_9.py  verify_slack_bot_setup.py  verify_task_filtering.py
lambda/: authorizer.py  event_processor.py  handlers.py  plugin_handler.py  requirements.txt
scripts/: README.md  deploy.sh  docker-local.sh  generate-token.sh  prune-stack.sh  sam-deploy-all.sh  sam-local-deploy.sh  sam-local-start.sh  setup-iam-permissions.sh  setup-secrets.sh  test-api.sh  test-endpoints.sh  test-sam-functions.sh  test-sam-local.sh  validate-sam-deployment.sh
slack_bot/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  __init__.py  api.py  command_handler.py  config.py  config_handler.py  config_storage.py  data_isolation.py  docker-compose.yml  error_handler.py  event_processor.py  interaction_handler.py  logging_config.py  main.py  message_formatter.py  models.py  notification_handler.py  notification_service.py  oauth_manager.py  pyproject.toml  requirements.txt  retry_queue.py  slack_api_client.py  templates.py  triage_api_client.py  user_middleware.py  user_storage.py  webhook_handler.py
slack_bot/docs/: DEPLOYMENT_GUIDE.md  DHI_BUILD_GUIDE.md  DHI_MIGRATION_SUMMARY.md  DHI_QUICK_REFERENCE.md  DHI_ROLLBACK_EXPLANATION.md  DOCKERFILE_COMPARISON.md  DOCKERFILE_OPTIMIZATION_REPORT.md  DOCKERFILE_QUICK_REFERENCE.md  MIGRATION_CHANGES.md  MIGRATION_COMPLETION_REPORT.md  MIGRATION_INDEX.md
tests/: __init__.py
tests/integration/: __init__.py  test_error_recovery.py  test_multi_user.py  test_oauth_flow.py  test_plugin_config_integration.py  test_slack_plan_delivery.py  test_slash_commands.py  (+1 more)
triage/: __init__.py  approval_manager.py  background_scheduler.py  cli.py  jira_client.py  models.py  plan_generator.py  task_classifier.py
(+102 files in other folders)
