[project]
name = "triage"
version = "0.1.0"
description = "Execution support system for senior technical professionals"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "pytest>=7.4.0",
    "hypothesis>=6.92.0",
    "markdown>=3.5.0",
    "pytest-asyncio>=0.21.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
triage = "triage.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
