# TrIAge
# Copyright (C) 2026 StrateCode
# Licensed under the GNU Affero General Public License v3 (AGPLv3)

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "triage"
version = "1.0.0"
description = "AI Secretary - Execution support system for technical professionals"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "AGPL-3.0"}
authors = [
    {name = "StrateCode", email = "info@stratecode.com"}
]
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "asyncpg==0.30.0",
    "certifi==2026.1.4",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "cryptography==46.0.3",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "hypothesis==6.150.3",
    "idna==3.11",
    "iniconfig==2.3.0",
    "markdown==3.10.1",
    "packaging==26.0",
    "pluggy==1.6.0",
    "pycparser==3.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pygments==2.19.2",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "python-dotenv==1.2.1",
    "redis==7.1.0",
    "requests==2.32.5",
    "ruff==0.8.4",
    "mypy==1.13.0",
    "slack-bolt==1.27.0",
    "slack-sdk==3.39.0",
    "sortedcontainers==2.4.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.3",
]

[project.scripts]
triage = "triage.cli:main"

[project.optional-dependencies]
dev = [
    "ruff==0.8.4",
    "mypy==1.13.0",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "hypothesis==6.150.3",
]

[tool.setuptools]
packages = ["triage"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",  # Line too long - handled by formatter
    "E722",  # Bare except - acceptable in test cleanup
    "F841",  # Unused variable - acceptable in tests for clarity
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["F821", "E712", "F841", "E722"]
"lambda/botocore/**/*.py" = ["E", "F", "W"]
"lambda/boto3/**/*.py" = ["E", "F", "W"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
